# raoc

./: .gitignore  Makefile  README.md  new_day.sh  todo.txt
2019/q2a/: Cargo.toml
2019/q2b/: Cargo.toml
2021/q10a/: Cargo.toml
2021/q10b/: Cargo.toml
2021/q11b/: Cargo.toml
2021/q12a/: Cargo.toml
2021/q12b/: Cargo.toml  main.py
2021/q13a/: Cargo.toml
2021/q13b/: Cargo.toml
2021/q14a/: Cargo.toml
2021/q15a/: main.py  script_15.py
2021/q15b/: Cargo.toml
2021/q17a/: Cargo.toml  main.py
2021/q17b/: Cargo.toml
2021/q1b/: Cargo.toml
2021/q20a/: Cargo.toml  main.py
2021/q21a/: main.py
2021/q2a/: Cargo.toml
2021/q2b/: Cargo.toml
2021/q3b/: Cargo.toml
2021/q4a/: Cargo.toml
2021/q5a/: Cargo.toml
2021/q6a/: Cargo.toml
2021/q6b/: Cargo.toml
2021/q7a/: Cargo.toml
2021/q8b/: Cargo.toml
2021/q9b/: Cargo.toml
2022/q11a/: Cargo.toml  main.py
2022/q11b/: Cargo.toml
2022/q12a/: main.py
q10a/: Cargo.toml
q10b/: Cargo.toml
q11a/: Cargo.toml
q12a/: main.py
q12b/: input3.txt
q13a/: Cargo.toml
q14a/: main.txt
q14b/: Cargo.toml
q15a/: Cargo.toml
q15b/: main.py
q19a/: Cargo.toml  main.py
q19b/: Cargo.toml
q1a/: Cargo.toml
q20b/: Cargo.toml
q21a/: Cargo.toml
q21b/: Cargo.toml  main.py
q3a/: Cargo.toml
q3b/: Cargo.toml
q4a/: .Cargo.toml.swp  .input.txt.swp  Cargo.toml
q4b/: Cargo.toml
q5a/: Cargo.toml
q5b/: Cargo.toml
q6b/: Cargo.toml
q7b/: Cargo.toml
q8a/: Cargo.toml
q8b/: Cargo.toml
q9a/: Cargo.toml
q9b/: Cargo.toml  main.py
runner/: Cargo.toml
runner/src/: .lib.rs.swp  lib.rs
(+152 files in other folders)
