[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
took = "0.1"

# Days
q1a = { path = "../q1a" }
q1b = { path = "../q1b" }
q2a = { path = "../q2a" }
q2b = { path = "../q2b" }
q3a = { path = "../q3a" }
q3b = { path = "../q3b" }
q4a = { path = "../q4a" }
q4b = { path = "../q4b" }
q5a = { path = "../q5a" }
q5b = { path = "../q5b" }
q6a = { path = "../q6a" }
q6b = { path = "../q6b" }
q7a = { path = "../q7a" }
q7b = { path = "../q7b" }
q8a = { path = "../q8a" }
q8b = { path = "../q8b" }
q9a = { path = "../q9a" }
q9b = { path = "../q9b" }
q10a = { path = "../q10a" }
q10b = { path = "../q10b" }
q11a = { path = "../q11a" }
q11b = { path = "../q11b" }
q12a = { path = "../q12a" }
q12b = { path = "../q12b" }
q13a = { path = "../q13a" }
q13b = { path = "../q13b" }
